--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,7 +238,7 @@ p {
     padding: 20px;
 }
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 980px), screen and (min-width: 769px) {
 
 }
 
